# web-scraper

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/web_scraper/: __init__.py  crawl.py  fetch.py  html_parse.py  main.py  report.py
tests/: test_crawl.py
