[project]
name = "web-scraper"
version = "0.1.0"
description = "A web scraper written in Python, focussing on internal links on websites to perform SEO analysis. "
readme = "README.md"
authors = [{ name = "Bailey Stringer", email = "bailey4770@protonmail.com" }]
requires-python = ">=3.14"
dependencies = [
  "aiohttp==3.12.12",
  "beautifulsoup4==4.13.4",
  "requests==2.32.4",
  "typer>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["basedpyright>=1.38.1", "ruff>=0.15.2"]

[project.scripts]
scraper = "web_scraper.main:main"
